[package]
name = "salsa"
version = "0.24.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "A generic framework for on-demand, incrementalized computation (experimental)"

[dependencies]
salsa-macro-rules = { version = "0.24.0", path = "components/salsa-macro-rules" }
salsa-macros = { version = "0.24.0", path = "components/salsa-macros", optional = true }

boxcar = "0.2.13"
crossbeam-queue = "0.3.12"
crossbeam-utils = "0.8.21"
hashbrown = "0.15"
hashlink = "0.10"
indexmap = "2"
intrusive-collections = "0.9.7"
parking_lot = "0.12"
portable-atomic = "1"
rustc-hash = "2"
smallvec = "1"
thin-vec = { version = "0.2.14" }
tracing = { version = "0.1", default-features = false, features = ["std"] }

# Automatic ingredient registration.
inventory = { version = "0.3.20", optional = true }

# parallel map
rayon = { version = "1.10.0", optional = true }

# Stuff we want Update impls for by default
compact_str = { version = "0.9", optional = true }

shuttle = { version = "0.8.1", optional = true }

# Persistent caching
erased-serde = { version = "0.4.6", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }

[features]
default = ["salsa_unstable", "rayon", "macros", "inventory", "accumulator"]
inventory = ["dep:inventory"]
persistence = [
    "dep:serde",
    "dep:erased-serde",
    "salsa-macros/persistence",
    "thin-vec/serde",
]
shuttle = ["dep:shuttle"]
accumulator = ["salsa-macro-rules/accumulator"]
macros = ["dep:salsa-macros"]

# FIXME: remove `salsa_unstable` before 1.0.
salsa_unstable = []

# This interlocks the `salsa-macros` and `salsa` versions together
# preventing scenarios where they could diverge in a given project
# which may ultimately result in odd issues due to the proc-macro
# output mismatching with the declarative macro inputs
[target.'cfg(any())'.dependencies]
salsa-macros = { version = "=0.24.0", path = "components/salsa-macros" }

[dev-dependencies]
# examples
crossbeam-channel = "0.5.15"
dashmap = { version = "6", features = ["raw-api"] }
eyre = "0.6.12"
notify-debouncer-mini = "0.4.1"
ordered-float = "5.0.0"

# tests/benches
annotate-snippets = "0.11.5"
codspeed-criterion-compat = { version = "3.0.5", default-features = false }
expect-test = "1.5.1"
rustversion = "1.0"
test-log = { version = "0.2.18", features = ["trace"] }
trybuild = "1.0"
serde_json = "1.0.140"

[[bench]]
name = "compare"
harness = false

[[bench]]
name = "incremental"
harness = false

[[bench]]
name = "accumulator"
harness = false
required-features = ["accumulator"]

[[bench]]
name = "dataflow"
harness = false

[[example]]
name = "lazy-input"
required-features = ["accumulator"]

[[example]]
name = "calc"
required-features = ["accumulator"]

[workspace]
members = ["components/salsa-macro-rules", "components/salsa-macros"]

[workspace.package]
authors = ["Salsa developers"]
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/salsa-rs/salsa"
rust-version = "1.85"
