[package]
name = "salsa-2022-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salsa = { path = "../components/salsa-2022", package = "salsa-2022" }

[dev-dependencies]
expect-test = "1.4.0"

[[bin]]
name = "salsa-2022-tests"
path = "main.rs"
