[package]
name = "calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salsa = { path = "../../components/salsa-entity-mock", package = "salsa-entity-mock" }
ordered-float = "3.0"

[dev-dependencies]
expect-test = "1.4.0"