[package]
name = "salsa-entity-mock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.1"
dashmap = "4.0.2"
rustc-hash = "1.1.0"
indexmap = "1.7.0"
hashlink = "0.7.0"
arc-swap = "1.4.0"
crossbeam-utils = { version = "0.8", default-features = false }
log = "0.4.5"
parking_lot = "0.11.0"
smallvec = "1.0.0"
salsa-entity-macros = { path = "../salsa-entity-macros" }