[package]
name = "salsa-macros"
version = "0.24.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Procedural macros for the salsa crate"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0.104", features = ["full", "visit-mut"] }
synstructure = "0.13.2"

[features]
default = []
persistence = []
