[package]
name = "salsa-macros"
version = "0.25.2"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Procedural macros for the salsa crate"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0.104", features = ["full", "visit-mut"] }
synstructure = "0.13.2"

[dev-dependencies]
# For doc-tests
salsa.path = "../../"

[features]
default = []
persistence = []
